Aula 4 - Intro CSS (Incompleto)

--- a/semana-1/sistema-loja/add-produto.html
+++ b/semana-1/sistema-loja/add-produto.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="./css/geral.css">
 </head>
 <body>
-    <div>
-        <p>Livraria Polar</p>
-    </div>
-    
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
-    </div>
+    <header>
+         <img src="./img/livrariapolar.png" alt="Logotipo da Livraria Polar" class="logo">
+             <div class="menu">
+                <a href="index.html">Página Inicial</a>
+                <a href="ctrl-estoque.html">Controle de Estoque</a>
+                <a href="add-produto.html">Adicionar Livro</a>
+                <a href="funcionarios.html">Funcionários</a>
+             </div>
+    </header>
 
     
     <h2>Adicionar Produto</h2>
