Aula 4 - Intro CSS

--- a/semana-1/sistema-loja/ctrl-estoque.html
+++ b/semana-1/sistema-loja/ctrl-estoque.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/geral.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -77,6 +77,14 @@
     </table>
 
     </div>
-
+    <footer>
+            <div>
+                <div class="social-bar">
+                    <img class="social-icon" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+                    <img class="social-icon" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+                    <img class="social-icon" src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+                </div>
+            </div>
+            </footer>   
 </body>
 </html>
