--- a/semana-1/sistema-loja/funcionarios.html
+++ b/semana-1/sistema-loja/funcionarios.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Funcionários</title>
-    <link rel="stylesheet" href="./css/geral.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
         <header>
@@ -13,18 +14,32 @@
                     <div class="menu">
                        <a href="index.html">Página Inicial</a>
                        <a href="ctrl-estoque.html">Controle de Estoque</a>
-                       <a href="add-produto.html">Adicionar Produto</a>
+                       <a href="add-produto.html">Adicionar Livro</a>
                        <a href="funcionarios.html">Funcionários</a>
                     </div>
            </header>
 
-    <h2>Funcionários</h2>
+    <div class="conteudo-home">
+
+    <h2>Funcionários da Livraria</h2>
+    <br>
     <ul>
-        <li>Lucas Duarte (CEO)</li>
-        <li>Natália Acedo (Gerente da Loja)</li>
-        <li>Scotch (Livreiro)</li>
-        <li>Chica (Livreira)</li>
-        <li>Kika (Limpeza)</li>
-    </ul>        
+        <li>Lucas Duarte - CEO</li>
+        <li>Natália Acedo - Gerente da Loja</li>
+        <li>Scotch - Livreiro</li>
+        <li>Chica - Livreira</li>
+        <li>Kika - Limpeza</li>
+    </ul>  
+    </div>   
+    
+    <footer>
+            <div>
+                <div class="social-bar">
+                    <img class="social-icon" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+                    <img class="social-icon" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+                    <img class="social-icon" src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+                </div>
+            </div>
+            </footer>   
 </body>
 </html>
