--- a/semana-1/sistema-loja/index.html
+++ b/semana-1/sistema-loja/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Livraria Polar</title>
-    <link rel="stylesheet" href="./css/style-index.css">
-    <link rel="stylesheet" href="./css/geral.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
